--- a/app/src/main/res/layout/activity_profile.xml
+++ b/app/src/main/res/layout/activity_profile.xml
@@ -45,8 +45,6 @@
             tools:srcCompat="@tools:sample/avatars" />
     </com.google.android.material.card.MaterialCardView>
 
-    <!-- Label peran (ADMIN/PENGGUNA) yang baru ditambahkan -->
-
     <View
         android:id="@+id/white_background"
         android:layout_width="0dp"
@@ -126,43 +124,18 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent" />
 
-    <!-- Layout untuk bagian User ID -->
-    <TextView
-        android:id="@+id/label_user_id"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="32dp"
-        android:layout_marginTop="16dp"
-        android:text="@string/user_id"
-        app:layout_constraintTop_toBottomOf="@id/text_email"
-        app:layout_constraintStart_toStartOf="@id/white_background" />
-
-    <TextView
-        android:id="@+id/text_user_id"
-        android:layout_width="0dp"
-        android:layout_height="wrap_content"
-        android:background="@drawable/textfield_background"
-        android:padding="16dp"
-        android:layout_marginTop="8dp"
-        android:layout_marginHorizontal="24dp"
-        android:text="12345678"
-        android:textColor="@android:color/black"
-        android:textSize="16sp"
-        app:layout_constraintTop_toBottomOf="@id/label_user_id"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toEndOf="parent" />
-
     <com.google.android.material.button.MaterialButton
         android:id="@+id/button_edit_profile"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:layout_marginHorizontal="16dp"
-        android:layout_marginBottom="16dp"
+        android:layout_marginTop="24dp"
+        android:layout_marginStart="24dp"
+        android:layout_marginEnd="8dp"
         android:paddingVertical="12dp"
         android:text="@string/edit_profile"
         app:icon="@drawable/ic_edit"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintStart_toStartOf="@id/white_background"
+        app:layout_constraintTop_toBottomOf="@id/text_email"
+        app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toStartOf="@id/button_logout" />
 
     <com.google.android.material.button.MaterialButton
@@ -171,13 +144,14 @@
         android:layout_width="0dp"
         app:strokeColor="@color/tosca_mandu"
         android:layout_height="wrap_content"
-        android:layout_marginHorizontal="16dp"
-        android:layout_marginBottom="16dp"
+        android:layout_marginTop="24dp"
+        android:layout_marginStart="8dp"
+        android:layout_marginEnd="24dp"
         android:paddingVertical="12dp"
         android:text="@string/logout"
         app:icon="@drawable/ic_logout"
-        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/text_email"
         app:layout_constraintStart_toEndOf="@id/button_edit_profile"
-        app:layout_constraintEnd_toEndOf="@id/white_background" />
+        app:layout_constraintEnd_toEndOf="parent" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
